interest structure complete