@@ -1,5 +1,6 @@
 package com.esgworks.service;
 
+import com.esgworks.domain.InterestReports;
 import com.esgworks.domain.Report;
 import com.esgworks.dto.CorporationDTO;
 import com.esgworks.dto.InterestReportsDTO;
@@ -20,6 +21,7 @@ public class ReportService {
     private final ReportRepository reportRepository;
     private final CorporationService corporationService;
     private final InterestReportsService interestReportsService;
+    private final InterestReportsRepository interestReportsRepository;
 
     public Report createReport(ReportRequest dto,String userId) {
         Report report = Report.builder()
@@ -104,13 +106,39 @@ public class ReportService {
     }
 
     public List<ReportDTO> searchReports(String keyword, String filter, String userId) {
-        List<Report> reports = reportRepository.search(keyword,filter,userId);
-        return reports.stream()
-                .map(report -> {
-                    CorporationDTO corpDto =  corporationService.getCorporationById(report.getCorpId());
-                    boolean interestReport = report.getInterestUserIds() != null && report.getInterestUserIds().contains(userId);
-                    return ReportDTO.fromEntity(report, corpDto, interestReport);
-                })
-                .collect(Collectors.toList());
+        if("interest".equals(filter)) {
+            //관심 reportId 리스트
+            List<InterestReports> interestReports = interestReportsRepository.findByUserId(userId);
+            List<String> reportIds = interestReports.stream().map(InterestReports::getReportId).toList();
+
+            //reportsID로 검색
+            List<Report> reports = reportRepository.findAllById(reportIds);
+
+            //키워드 추가 필터링
+            if(keyword != null && !keyword.isEmpty()) {
+                String lowerKeyword = keyword.toLowerCase();
+                reports = reports.stream()
+                        .filter(report ->
+                                (report.getTitle() != null && report.getTitle().toLowerCase().contains(lowerKeyword)) ||
+                                        (report.getContent() != null && report.getContent().toLowerCase().contains(lowerKeyword))
+                        )
+                        .toList();
+            }
+            return reports.stream()
+                    .map(report -> {
+                        CorporationDTO corpDto = corporationService.getCorporationById(report.getCorpId());
+                        return ReportDTO.fromEntity(report, corpDto, true);
+                    })
+                    .toList();
+        } else {
+            List<Report> reports = reportRepository.search(keyword, filter, userId);
+            return reports.stream()
+                    .map(report -> {
+                        CorporationDTO corpDto = corporationService.getCorporationById(report.getCorpId());
+                        return ReportDTO.fromEntity(report, corpDto, false);
+                    })
+                    .toList();
+        }
+
     }
 }
